# tiny-nim-agent

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  FEATURE-AUDIT.md  README.md
.github/workflows/: actions-smoke.yml  browser-smoke.yml  ci.yml
apps/webui/: Cargo.toml
apps/webui/src/: http.rs  lib.rs  main.rs  smoke_artifact.rs  smoke_events.rs  smoke_report.rs
crates/agent_core/: Cargo.toml
crates/agent_core/src/: lib.rs
crates/model_contract/: Cargo.toml
crates/model_contract/src/: lib.rs
crates/nim_router/: Cargo.toml
crates/nim_router/src/: lib.rs
crates/proof/: Cargo.toml
crates/proof/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: git.rs  lib.rs
docs/: ARCHITECTURE.md  CI_NOTES.md  NIM_ROUTING_AND_TOOL_LOOP.md  NO_STUBS_POLICY.md  OLD_PROJECTS_AUDIT.md  ROADMAP.md  SOURCE_REVIEW_LOG.md
scripts/: browser_smoke.mjs  check_line_count.py  check_no_placeholders.sh  verify.sh
