[workspace]
members = [
    "crates/nim_router",
    "crates/model_contract",
    "crates/agent_core",
    "crates/tools",
    "crates/proof",
    "apps/webui",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/organicoverlords/tiny-nim-agent"
rust-version = "1.80"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
panic = "warn"
unwrap_used = "warn"
expect_used = "warn"
