[package]
name = "tiny-webui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tiny-agent-core = { path = "../../crates/agent_core" }
tiny-proof = { path = "../../crates/proof" }
tiny-tools = { path = "../../crates/tools" }

[lib]
name = "tiny_webui"
path = "src/lib.rs"

[lints]
workspace = true
