[package]
name = "tiny-agent-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tiny-model-contract = { path = "../model_contract" }
tiny-proof = { path = "../proof" }
tiny-tools = { path = "../tools" }

[lib]
name = "tiny_agent_core"
path = "src/lib.rs"

[lints]
workspace = true
